FIX: tag list wrapping below thumbnail on non-tiles

--- a/common/common.scss
+++ b/common/common.scss
@@ -1,3 +1,9 @@
+.topic-list-item {
+  .discourse-tags {
+    display: inline;
+  }
+}
+
 .topic-list .link-bottom-line {
   display: block;
 }
